enable dynamic agent loading for mockito